# SlicerSwissSkullStripper

./: CMakeLists.txt  README.md
SwissSkullStripper/: CMakeLists.txt  SwissSkullStripper.xml
